[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_common"
description = "Common functions and variables shared across projects."
version = "2.0.0"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" }
]
dependencies = [
    "pandas",
    "scikit-learn",
    # "autogluon" # better for users who need it to install it themselves - installation takes so long
]

[tool.setuptools]
package-dir = {"ml_common" = "src"}