[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_common"
description = "Common functions and variables shared across projects."
version = "2.0.1"
authors = [
    { name = "Kevin He", email = "Kevin.He@uhn.ca" }
]
dependencies = [
    "pandas",
    "scikit-learn",
    # "autogluon" # better for users who need it to install it themselves - installation takes so long
]

[project.optional-dependencies]
autogluon = [
    "autogluon==1.4.0",
    "autogluon.tabular[tabicl,realmlp]==1.4.0",
    "tabpfn==2.1.3",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0"
]

[tool.setuptools]
package-dir = {"ml_common" = "src"}